# kargo-demo-app

./: CHANGELOG.md  Dockerfile  Makefile  pyproject.toml  readme.md  requirements.txt
.github/workflows/: Build and Push Docker Image.yml
src/: main.py
