[tool.poetry]
name = "kargo-demo-app"
version = "0.0.1"
description = "version bumping for kargo demo"
authors = ["Tautcius <t.bujauskas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"

[tool.commitizen]
version = "0.0.1"  # This should be your current semver version

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
